--- a/config.gradle
+++ b/config.gradle
@@ -14,37 +14,37 @@ ext {
 
 	dependencies = [
 
-		"support-v4": "com.android.support:support-v4:${supportLibrary}",
-		"appcompat-v7": "com.android.support:appcompat-v7:${supportLibrary}",
-		"support-v13": "com.android.support:support-v4:${supportLibrary}",
-		"design": "com.android.support:design:${supportLibrary}"
+		support_v4: "com.android.support:support-v4:${supportLibrary}",
+		appcompat_v7: "com.android.support:appcompat-v7:${supportLibrary}",
+		support_v13: "com.android.support:support-v4:${supportLibrary}",
+		design: "com.android.support:design:${supportLibrary}",
 
-		"multidex": "com.android.support:multidex:1.0.3",
-		"constraint": "com.android.support.constraint:constraint-layout:1.1.3",
+		multidex: "com.android.support:multidex:1.0.3",
+		constraint: "com.android.support.constraint:constraint-layout:1.1.3",
 
-		"cardview": "com.android.support:cardview-v7:${supportLibrary}",
-		"recyclerview": "com.android.support:recyclerview-v7:${supportLibrary}",
+		cardview: "com.android.support:cardview-v7:${supportLibrary}",
+		recyclerview: "com.android.support:recyclerview-v7:${supportLibrary}",
 
-		"fragmentation": "me.yokeyword:fragmentation:1.3.6",
-		"eventbus": "org.greenrobot:eventbus:3.1.1",
+		fragmentation: "me.yokeyword:fragmentation:1.3.6",
+		eventbus: "org.greenrobot:eventbus:3.1.1",
 
-		"okhttp": "com.squareup.okhttp3:okhttp:3.10.0",
-		"retrofit": "com.squareup.retrofit2:retrofit:2.4.0",
+		okhttp: "com.squareup.okhttp3:okhttp:3.10.0",
+		retrofit: "com.squareup.retrofit2:retrofit:2.4.0",
 
-		"fastjson": "com.alibaba:fastjson:1.1.68.android",
-		"gson": "com.google.code.gson:gson:2.8.4"
+		fastjson: "com.alibaba:fastjson:1.1.68.android",
+		gson: "com.google.code.gson:gson:2.8.4",
 
-		"logger": "com.orhanobut:logger:2.2.0",
+		logger: "com.orhanobut:logger:2.2.0",
 
-		"utilcode": "com.blankj:utilcode:1.16.4",
+		utilcode: "com.blankj:utilcode:1.16.4",
 
-		"zbar": "me.dm7.barcodescanner:zbar:1.9.8",
+		zbar: "me.dm7.barcodescanner:zbar:1.9.8",
 
-		"glide": "com.github.bumptech.glide:glide:3.7.0",
+		glide: "com.github.bumptech.glide:glide:3.7.0",
 
-		"AppBaseModule": "com.github.niulinguo:AppBaseModule:v1.8",
-		"LoadingModule": "com.github.niulinguo:LoadingModule:v1.3",
-		"HttpModule": "com.github.niulinguo:HttpModule:v1.7",
-		"MqttModule": "com.github.niulinguo:MqttModule:v1.6"
+		AppBaseModule: "com.github.niulinguo:AppBaseModule:v1.8",
+		LoadingModule: "com.github.niulinguo:LoadingModule:v1.3",
+		HttpModule: "com.github.niulinguo:HttpModule:v1.7",
+		MqttModule: "com.github.niulinguo:MqttModule:v1.6"
 	]
 }
